--- a/src/components/Header/Sidedrawer/Dropdown/Dropdown.module.css
+++ b/src/components/Header/Sidedrawer/Dropdown/Dropdown.module.css
@@ -1,7 +1,6 @@
 .Dropdown {
-    background-color: white;
     width: 40px;
-    height: 100%;
+    height: 80%;
     display: flex;
     flex-flow: column;
     justify-content: space-around;
@@ -9,12 +8,11 @@
     padding: 10px 0;
     box-sizing: border-box;
     cursor: pointer;
+    margin-left: 10px;
 }
 
-
-
 .Dropdown div {
-    width: 90%;
+    width: 80%;
     height: 3px;
     background-color: white;
 }
