--- a/src/components/Header/Logo/Logo.module.css
+++ b/src/components/Header/Logo/Logo.module.css
@@ -1,17 +1,40 @@
 .Logo {
-    width: 40px;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
-    margin-left: 10px;
+    justify-content: center;
+    box-sizing: border-box;
+    border-bottom: 2px solid #6DD5FA;
 }
 
 .Logo a {
     display: block;
     height: inherit;
-    width: inherit;
+    width: 40px;
 }
 
 .Logo img {
     min-height: 100%;
+}
+
+@media (min-width: 750px) {
+    .Logo {
+        width: 40px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        margin-left: 10px;
+        border: none;
+    }
+    
+    .Logo a {
+        display: block;
+        height: inherit;
+        width: inherit;
+    }
+    
+    .Logo img {
+        min-height: 100%;
+    }
 }
