Adds Improvements to styling

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,4 +3,6 @@
     background-color: black;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    background-image: linear-gradient(to right, #000000, #434343);
 }
