--- a/src/components/Header/Sidedrawer/Dropdown/Dropdown.module.css
+++ b/src/components/Header/Sidedrawer/Dropdown/Dropdown.module.css
@@ -1,14 +1,17 @@
 .Dropdown {
-    width: 40px;
-    height: 80%;
+    width: 80px;
+    height: 100%;
     display: flex;
     flex-flow: column;
     justify-content: space-around;
     align-items: center;
-    padding: 10px 0;
     box-sizing: border-box;
     cursor: pointer;
-    margin-left: 10px;
+    border: 2px solid #6DD5FA;
+    border-left: none;
+    border-top: none;
+    padding: 15px;
+    transition: background-color .2s ease-in;
 }
 
 .Dropdown div {
@@ -17,8 +20,16 @@
     background-color: white;
 }
 
-@media (min-width: 500px) {
+.Dropdown:hover {
+    background-color: #4286f4;
+}
+
+@media (min-width: 750px) {
     .Dropdown {
+        width: 40px;
+        height: 80%;
+        padding: 10px 0;
+        margin-left: 10px;
         display: none;
     }
 }
