--- a/src/components/Header/Search/Search.module.css
+++ b/src/components/Header/Search/Search.module.css
@@ -3,7 +3,7 @@
     display: block;
     height: 100%;
     width: 80px;
-    border: 2px solid #6DD5FA;
+    border: 2px solid #8a8a8a;
     border-right: none;
     border-top: none;
     text-align: center;
