--- a/src/components/Header/Sidedrawer/Dropdown/Dropdown.module.css
+++ b/src/components/Header/Sidedrawer/Dropdown/Dropdown.module.css
@@ -7,7 +7,7 @@
     align-items: center;
     box-sizing: border-box;
     cursor: pointer;
-    border: 2px solid #6DD5FA;
+    border: 2px solid #8a8a8a;
     border-left: none;
     border-top: none;
     padding: 15px;
