--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,3 +6,26 @@
     justify-content: space-between;
     background-image: linear-gradient(to right, #000000, #434343);
 }
+
+.NavigationDesk {
+    display: none;
+}
+
+@media (min-width: 750px) {
+    .NavigationDesk {
+        display: flex;
+    }
+
+    .NavigationDesk {
+        margin-left: 10px;
+    }
+    
+    .NavigationDesk ul {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        list-style-type: none;
+        padding: 0;
+    }
+}
