--- a/src/components/Header/Logo/Logo.module.css
+++ b/src/components/Header/Logo/Logo.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
-    border-bottom: 2px solid #6DD5FA;
+    border-bottom: 2px solid #8a8a8a;
 }
 
 .Logo a {
