--- a/src/components/Header/Sidedrawer/DropdownDrawer/DropdownDrawer.module.css
+++ b/src/components/Header/Sidedrawer/DropdownDrawer/DropdownDrawer.module.css
@@ -1,4 +1,4 @@
-.Dropdown {
+.DropdownDrawer {
     width: 80px;
     height: 100%;
     display: flex;
@@ -12,20 +12,21 @@
     border-top: none;
     padding: 15px;
     transition: background-color .2s ease-in;
+    background-color: transparent;
 }
 
-.Dropdown div {
+.DropdownDrawer div {
     width: 80%;
     height: 3px;
     background-color: white;
 }
 
-.Dropdown:hover {
+.DropdownDrawer:hover {
     background-color: #4286f4;
 }
 
 @media (min-width: 750px) {
-    .Dropdown {
+    .DropdownDrawer {
         width: 40px;
         height: 80%;
         padding: 10px 0;
