--- a/src/components/Header/Sidedrawer/Dropdown/Dropdown.module.css
+++ b/src/components/Header/Sidedrawer/Dropdown/Dropdown.module.css
@@ -1,4 +1,4 @@
-.DropdownDrawer {
+.Dropdown {
     width: 80px;
     height: 100%;
     display: flex;
@@ -12,21 +12,20 @@
     border-top: none;
     padding: 15px;
     transition: background-color .2s ease-in;
-    background-color: transparent;
 }
 
-.DropdownDrawer div {
+.Dropdown div {
     width: 80%;
     height: 3px;
     background-color: white;
 }
 
-.DropdownDrawer:hover {
+.Dropdown:hover {
     background-color: #4286f4;
 }
 
 @media (min-width: 750px) {
-    .DropdownDrawer {
+    .Dropdown {
         width: 40px;
         height: 80%;
         padding: 10px 0;
