--- a/src/components/Header/Sidedrawer/Sidedrawer.module.css
+++ b/src/components/Header/Sidedrawer/Sidedrawer.module.css
@@ -2,6 +2,7 @@
     position: absolute;
     top: 0;
     left: -70vw;
+    transition: left .3s ease-out;
     width: 70vw;
     height: 100vh;
     background-color: #c2c2c2;
@@ -25,33 +26,8 @@
     left: -70vw;
 }
 
-.NavigationMob {
-    display: flex;
-}
-
-.NavigationMob {
-    margin: 10px 0 0 50px;
-}
-
-.NavigationMob ul {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    list-style-type: none; 
-    padding: 0;
-}
-
-.NavigationMob ul li {
-    margin: 0 0 10px 0;
-}
-
 @media (min-width: 750px) {
     .Sidedrawer {
-        display: none;
-    }
-
-    .NavigationMob {
         display: none;
     }
 }
