Adds a Mini Button style
- a button that is perfect for small icons, exits or info buttons

--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -25,3 +25,15 @@
 .Success {
     background-color: #608aad;
 }
+
+.Mini {
+    height: 25px;
+    width: 25px;
+    background-color: #fff;
+    color: #608aad;
+    transition: color .2s ease-out; 
+}
+
+.Mini:hover {
+    color: #fff;
+}
