--- a/src/components/Home/Slider/Slider.module.css
+++ b/src/components/Home/Slider/Slider.module.css
@@ -29,6 +29,8 @@
     justify-content: center;
     align-items: center;
     height: 225px;
+    width: min-content !important;
+    cursor: pointer;
 }
 
 .Item img {
