--- a/src/components/UI/Slider/Slider.module.css
+++ b/src/components/UI/Slider/Slider.module.css
@@ -36,3 +36,36 @@
 .Item img {
     height: 100%;
 }
+
+/* 
+[
+    {
+        breakpoint: 768,
+        settings: {
+        slidesToShow: 3,
+        slidesToScroll: 2,
+        },
+    },
+    {
+        breakpoint: 980,
+        settings: {
+        slidesToShow: 4,
+        slidesToScroll: 3,
+        },
+    },
+    {
+        breakpoint: 1200,
+        settings: {
+        slidesToShow: 5,
+        slidesToScroll: 4,
+        },
+    },
+    {
+        breakpoint: 10000,
+        settings: {
+        slidesToShow: 6,
+        slidesToScroll: 5,
+        },
+    },
+    ]
+*/
