--- a/src/containers/Explore/Explore.module.css
+++ b/src/containers/Explore/Explore.module.css
@@ -1,6 +1,19 @@
 .Explore {
+    box-sizing: border-box;
     height: 100%;
     min-height: 100vh;
     width: 90vw;
-    margin: 0 auto;
+    margin: 25px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.TypeButtons {
+    width: 100%;
+}
+
+.TypeButtons button {
+    height: 40px;
 }
