Adds styling to formElement Component

--- a/src/components/UI/FormElement/FormElement.module.css
+++ b/src/components/UI/FormElement/FormElement.module.css
@@ -1,7 +1,8 @@
 .FormElement {
-    
+    margin-left: 10px;
 }
 
 .Invalid {
-    background-color: red;
+    border: 1px solid salmon;
+    outline: none;
 }
