--- a/src/components/Header/Navigation/NavigationItem/NavigationItem.module.css
+++ b/src/components/Header/Navigation/NavigationItem/NavigationItem.module.css
@@ -14,7 +14,7 @@
 
 .NavigationItem a:hover,
 .NavigationItem a:active,
-.NavigationItem a.active {
+.NavigationItem .active {
     color: #468cc7;
 }
 
