--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,3 +6,14 @@
     justify-content: space-between;
     background-image: linear-gradient(to right, #000000, #434343);
 }
+
+.Desk {
+    display: none;
+}
+
+@media (min-width: 750px) {
+    .Desk {
+        display: initial;
+    }
+}
+
