--- a/src/components/Info/InfoCard/InfoCard.module.css
+++ b/src/components/Info/InfoCard/InfoCard.module.css
@@ -4,14 +4,14 @@
     justify-content: space-around;
     box-sizing: border-box;
     width: 80%;
+    height: 100%;
     background-color: #ededed;
     box-shadow: 3px 3px 10px #637899;
-    margin-top: 25px;
 }
 
 .InfoCard img {
     max-height: 400px;
-    margin: 25px;
+    margin: 0 25px;
     box-shadow: 5px 5px 15px #637899;
 }
 
