--- a/src/components/Info/InfoCard/RatingOverlay/RatingOverlay.module.css
+++ b/src/components/Info/InfoCard/RatingOverlay/RatingOverlay.module.css
@@ -9,7 +9,7 @@
     width: 60px;
     height: 150px;
     background-color: #608aad;
-    border: 1px solid #555;
+    border-right: 2px solid #4b7699;
 }
 
 .RatingOverlay input {
