--- a/src/components/Info/InfoCard/ListOverlay/ListOverlay.module.css
+++ b/src/components/Info/InfoCard/ListOverlay/ListOverlay.module.css
@@ -5,6 +5,7 @@
     height: 100%;
     border-right: 2px solid #4b7699;
     overflow: hidden;
+    min-width: 200px;
 }
 
 .ListOverlay div {
@@ -13,4 +14,8 @@
     border-radius: 0;
     height: 100%;
     overflow-y: scroll;
+}
+
+.Disabled {
+    color: #666;
 }
