Adds List Item and connects the component to the ListDropdown Component

--- a/src/components/User/Lists/ListsControls/ListsDropdown/ListsDropdown.module.css
+++ b/src/components/User/Lists/ListsControls/ListsDropdown/ListsDropdown.module.css
@@ -4,6 +4,7 @@
     background-color: #608aad;
     border-radius: 10px;
     transition: min-height 1s ease-in;
+    width: 100%;
 }
 
 .ListsDropdown ul {
