Adds FetchListStatus, Update List, and fetch List Media ActionTypes

--- a/src/containers/User/User.module.css
+++ b/src/containers/User/User.module.css
@@ -1,7 +1,6 @@
 .User {
-    width: 90vw;
-    margin: 0 auto;
+    width: 50vw;
+    margin: 25px auto;
     background-color: #fff;
     box-shadow: 3px 3px 10px #637899;
-    margin-top: 25px;
 }
