--- a/src/components/Authentication/Authentication.module.css
+++ b/src/components/Authentication/Authentication.module.css
@@ -50,11 +50,14 @@
 }
 
 .Controls button {
-    width: 25%;
+    width: 20%;
     height: 30px;
 }
 
 .Controls button:last-child {
-    margin-left: 10px;
+    margin-left: 5px;
 }
 
+.Guest {
+    min-width: fit-content;
+}
