--- a/src/components/Authentication/Authentication.module.css
+++ b/src/components/Authentication/Authentication.module.css
@@ -3,12 +3,12 @@
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 150px);
+    box-sizing: border-box;
 }
 
 .Form {
-    width: 40%;
-    min-height: 500px;
+    width: 55%;
     background-color: #fff;
     box-shadow: 3px 3px 10px #637899;
     padding: 25px;
@@ -22,42 +22,60 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 70%;
-    margin: 40px auto 20px auto;
+    width: 100%;
+    margin: 40px auto 40px auto;
 }
 
 .Inputs div {
-    min-height: 40px;
+    display: flex;
+    flex-direction: column;
 }
 
 .Inputs label {
     box-sizing: border-box;
     display: inline-block;
-    width: 25%;
+    margin: 10px 0;
+    font-size: 1.1rem;
+    display: none;
 }
 
 .Inputs input {
     box-sizing: border-box;
     display: inline-block;
-    width: calc(75% - 10px);
     border: 1px solid #ccc;
     padding: 5px;
+    margin: 10px 0;
 }
 
 .Form .Controls {
-    width: 70%;
+    width: 100%;
     margin: 0 auto;
 }
 
 .Controls button {
-    width: 20%;
+    width: 100%;
     height: 30px;
-}
-
-.Controls button:last-child {
-    margin-left: 5px;
+    margin: 5px 0;
 }
 
 .Guest {
     min-width: fit-content;
+}
+
+@media(min-width: 750px) {
+    .Form .Controls {
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .Controls button:first-child {
+        margin-left: 0;
+    }
+    
+    .Controls button {
+        width: 25%;
+        height: 30px;
+        display: inline-block;
+        margin-left: 10px;
+    }
 }
