--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,7 +3,6 @@
     background-color: black;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     background-image: linear-gradient(to right, #000000, #434343);
 }
 
@@ -14,6 +13,7 @@
 @media (min-width: 750px) {
     .Desk {
         display: initial;
+        margin-left: 10px;
     }
 }
 
