--- a/src/components/UI/Banner/Banner.module.css
+++ b/src/components/UI/Banner/Banner.module.css
@@ -16,7 +16,7 @@
     }
 
     .Banner img {
-        width: 100%;
+        height: 100%;
         z-index: 50;
     }
 
@@ -39,7 +39,7 @@
 
     .Overlay {
         box-sizing: border-box;
-        max-width: 30%;
+        max-width: 75%;
         height: 100%;
         padding: 20px;
         background-color: rgba(138, 183, 255, .6);
@@ -55,5 +55,33 @@
         justify-content: center;
         align-items: center;
         height: 100%;
+    }
+}
+
+@media (min-width: 900px) {
+
+    .Overlay {
+        box-sizing: border-box;
+        max-width: 50%;
+        height: 100%;
+        padding: 20px;
+        background-color: rgba(138, 183, 255, .6);
+        border: 1px solid #608aad;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 100;
+    }
+
+    .Banner img {
+        height: 100%;
+        width: 100%;
+    }
+}
+
+@media (min-width: 1200px) {
+    .Banner img {
+        height: unset;
+        width: 100%;
     }
 }
