--- a/src/components/UI/DataInfo/DataInfo.module.css
+++ b/src/components/UI/DataInfo/DataInfo.module.css
@@ -36,11 +36,24 @@
 
 .DataInfo img,
 .UserDataInfo img {
-    width: 150px;
+    width: 100%;
 }
 
 .DataInfo .Item,
 .UserDataInfo .Item {
-    margin: 10px;
+    box-sizing: border-box;
+    width: calc(33% - 6px);
+    margin: 3px;
     cursor: pointer;
 }
+
+@media (min-width: 768px) {
+    .DataInfo .Item,
+    .UserDataInfo .Item {
+        box-sizing: border-box;
+        width: calc(20% - 20px);
+        margin: 10px;
+        cursor: pointer;
+    }
+}
+
