Adds InfoCard Overlay Styles

--- a/src/components/User/Lists/ListsControls/ListsDropdown/ListsDropdown.module.css
+++ b/src/components/User/Lists/ListsControls/ListsDropdown/ListsDropdown.module.css
@@ -1,31 +1,6 @@
-.ListsDropdown {
-    padding: 0;
-    padding-top: 45px;
-    background-color: #608aad;
-    border-radius: 10px;
-    transition: min-height 1s ease-in;
-    width: 100%;
-}
-
-.ListsDropdown ul {
+.ListsDropdown ul{
     margin: 0;
-    padding: 0;
-}
-
-.ListsDropdown li{
-    list-style: none;
-    padding: 5px 20px;
-    cursor: pointer;
-}
-
-.ListsDropdown li:last-child {
-    padding-bottom: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.ListsDropdown li:hover {
-    background-color: #4286f4;
+    padding: 20px;
 }
 
 .Hide {
@@ -39,3 +14,35 @@
 .Center {
     text-align: center;
 };
+
+@media(min-width: 750px) {
+    .ListsDropdown {
+        padding: 0;
+        padding-top: 45px;
+        background-color: #608aad;
+        border-radius: 10px;
+        transition: min-height 1s ease-in;
+        width: 100%;
+    }
+    
+    .ListsDropdown ul {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .ListsDropdown li{
+        list-style: none;
+        padding: 5px 20px;
+        cursor: pointer;
+    }
+    
+    .ListsDropdown li:last-child {
+        padding-bottom: 10px;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
+    
+    .ListsDropdown li:hover {
+        background-color: #4286f4;
+    }
+}
