--- a/src/components/infoCard/infoCard/ListOverlay/ListOverlay.module.css
+++ b/src/components/infoCard/infoCard/ListOverlay/ListOverlay.module.css
@@ -1,21 +1,30 @@
 .ListOverlay {
-    position: absolute;
-    top: 0;
-    right: 40px;
-    height: 100%;
-    border-right: 2px solid #4b7699;
-    overflow: hidden;
-    min-width: 200px;
-}
-
-.ListOverlay div {
-    box-sizing: content-box;
-    padding: 10px 0;
-    border-radius: 0;
-    height: 100%;
-    overflow-y: scroll;
+    width: 100%;
+    padding-right: 20px;
+    background-color: #608aad
 }
 
 .Disabled {
     color: #666;
+}
+
+@media (min-width: 750px) {
+    .ListOverlay {
+        position: absolute;
+        top: 0;
+        right: 40px;
+        height: 100%;
+        max-width: 300px;
+        border-right: 2px solid #4b7699;
+        overflow: hidden;
+        min-width: 200px;
+    }
+    
+    .ListOverlay div {
+        box-sizing: content-box;
+        padding: 10px 0;
+        border-radius: 0;
+        height: 100%;
+        overflow-y: scroll;
+    }
 }
