--- a/src/components/User/Lists/ListsControls/ListsDropdown/ListsDropdown.module.css
+++ b/src/components/User/Lists/ListsControls/ListsDropdown/ListsDropdown.module.css
@@ -1,6 +1,29 @@
 .ListsDropdown ul{
+    background-color: #608aad;
     margin: 0;
     padding: 20px;
+    padding-bottom: 0;
+}
+
+.ListsDropdown ul {
+    margin: 0;
+    padding: 0;
+}
+
+.ListsDropdown li{
+    list-style: none;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.ListsDropdown li:last-child {
+    padding-bottom: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.ListsDropdown li:hover {
+    background-color: #4286f4;
 }
 
 .Hide {
@@ -23,26 +46,5 @@
         border-radius: 10px;
         transition: min-height 1s ease-in;
         width: 100%;
-    }
-    
-    .ListsDropdown ul {
-        margin: 0;
-        padding: 0;
-    }
-    
-    .ListsDropdown li{
-        list-style: none;
-        padding: 5px 20px;
-        cursor: pointer;
-    }
-    
-    .ListsDropdown li:last-child {
-        padding-bottom: 10px;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
-    }
-    
-    .ListsDropdown li:hover {
-        background-color: #4286f4;
     }
 }
