--- a/src/components/Header/Logo/Logo.module.css
+++ b/src/components/Header/Logo/Logo.module.css
@@ -5,22 +5,57 @@
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
-    border-bottom: 2px solid #8a8a8a;
 }
 
 .Logo a {
     display: block;
-    height: inherit;
-    width: 40px;
+    text-decoration: none;
 }
 
-.Logo img {
-    min-height: 100%;
+.LogoLetters {
+    margin: 0;
+    font-size: 3rem;
+    text-align: center;
+    font-weight: bold;
 }
 
-@media (min-width: 750px) {
+.D_Mob {
+    display: inline;
+}
+
+.R_Extend {
+    display: none;
+}
+
+.M_Extend {
+    display: none;
+}
+
+.First {
+    color: #c7416f;
+}
+
+.Second {
+    color: white;
+}
+
+@media(min-width: 500px) {
+    .D_Mob {
+        display: none;
+    }
+
+    .R_Extend {
+        display: inline;
+    }
+    
+    .M_Extend {
+        display: inline;
+    }    
+}
+
+@media (min-width: 800px) {
     .Logo {
-        width: 40px;
+        width: auto;
         height: 100%;
         display: flex;
         align-items: center;
@@ -30,7 +65,6 @@
     
     .Logo a {
         display: block;
-        height: inherit;
         width: inherit;
     }
     
