--- a/src/components/Header/Navigation/Navigation.module.css
+++ b/src/components/Header/Navigation/Navigation.module.css
@@ -1,9 +1,9 @@
-.Mobile {
-    display: initial;
+.TV_Extend {
+    display: none;
 }
 
-@media (min-width: 750px) {
-    .Mobile {
-        display: none;
+@media(min-width: 911px) {
+    .TV_Extend {
+        display: inline;
     }
 }
