--- a/src/components/Header/SearchInput/DropdownSearch/DropdownSearch.module.css
+++ b/src/components/Header/SearchInput/DropdownSearch/DropdownSearch.module.css
@@ -3,7 +3,6 @@
     display: block;
     height: 100%;
     width: 80px;
-    border: 2px solid #8a8a8a;
     border-right: none;
     border-top: none;
     text-align: center;
@@ -15,10 +14,14 @@
     font-size: 2rem;
     padding: 10px;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-@media (min-width: 750px) {
-    .DropdownSearch {
-        display: none;
-    }
+.DropdownSearch svg {
+    size: 50px;
+    fill: white;
+    width: 35px;
+    height: 35px;
 }
