--- a/src/containers/Explore/Explore.module.css
+++ b/src/containers/Explore/Explore.module.css
@@ -3,11 +3,12 @@
     height: 100%;
     min-height: 100vh;
     width: 90vw;
-    margin: 25px auto;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 25px 0 ;
 }
 
 .TypeButtons {
