--- a/src/shared/Styles/Navigation.module.css
+++ b/src/shared/Styles/Navigation.module.css
@@ -1,6 +1,9 @@
 /* Navigation */
 .NavigationDesk {
     display: none;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .NavigationMob {
@@ -24,7 +27,7 @@
     margin: 0 0 10px 0;
 }
 
-@media (min-width: 750px) {
+@media (min-width: 800px) {
     .NavigationDesk {
         display: flex;
     }
