--- a/src/shared/Styles/Search.module.css
+++ b/src/shared/Styles/Search.module.css
@@ -1,71 +1,82 @@
 /* Search */
 
 .MainSearch {
-    display: block !important;
+    display: flex !important;
+    z-index: 5;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin-top: 2px;
 }
 
-.SearchDesk {
-    display: none;
+.MainSearch form {
+    height: 60px !important;
+}
+
+.MainSearch input {
+    font-size: 18px;
+}
+
+.MainSearch select {
+    font-size: 16px;
+    padding-left: 5px;
+    padding-right: 10px;
+    border-bottom-left-radius: 3px;
+    border-top-left-radius: 3px;
+}
+
+.MainSearch button {
+    border-bottom-right-radius: 3px;
+    border-top-right-radius: 3px;
 }
 
 .SearchMob {
     background-color: #ccc;
     height: 50px;
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px;
 }
 
-.SearchMob form,
-.SearchDesk form {
+.SearchMob form {
+    width: 80%;
+    max-width: 500px;
+}
+
+.SearchMob input {
+    flex: 1;
+}
+
+.SearchMob form {
     display: flex;
     justify-content: center;
     width: 100%;
+    height: 40px;
 }
 
-.SearchMob select,
-.SearchDesk select {
+.SearchMob select{
     border: none;
     border-right: 1px solid #ccc;
     outline: none;
 }
 
-.SearchMob input,
-.SearchDesk input {
+.SearchMob input { 
     box-sizing: border-box;
     border: none;
     border-radius: 0px;
     padding: 5px;
 }
 
-.SearchMob button,
-.SearchDesk button {
+.SearchMob button {
     border: none;
     padding: 3px;
     width: 75px;
     fill: #323;
     margin-right: 0;
+    fill: white;
 }
 
-.SearchMob button:hover,
-.SearchDesk button:hover {
-    background-color: #4286f4;
+.SearchMob button:hover {
+    background-color: #c7416f;
 }
-
-@media (min-width: 750px) {
-    .SearchDesk {
-        display: block;
-    }
-
-    .HeaderSearch form {
-        height: 30px;
-    }
-
-    .SearchMob {
-        display: none;
-    }
-    
-}
-
