--- a/src/components/infoCard/infoCard/InfoCard.module.css
+++ b/src/components/infoCard/infoCard/InfoCard.module.css
@@ -1,3 +1,41 @@
+.InfoControls {
+    height: 700px;
+    z-index: 8;
+    margin-right: 10px;
+}
+
+.InfoControls ul {
+    margin: 0;
+    padding: 0;
+}
+
+.InfoControls li {
+    width: 75px;
+    height: 75px;
+    background-color: #ededed;
+    box-shadow: 3px 3px 10px #637899;
+    list-style-type: none;
+    margin: 0;
+    margin-bottom: 25px;
+}
+
+.InfoControls button {
+    fill: #c97793;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box; 
+    width: 100%;
+    height: 100%;
+    transition: fill .2s ease-in;
+    cursor: pointer; 
+    border: none;
+}
+
+.InfoControls button:hover {
+    fill: #c7416f;
+}
+
 .InfoCard {
     position: relative;
     display: flex;
@@ -5,17 +43,18 @@
     align-items: center;
     justify-content: space-around;
     box-sizing: border-box;
-    width: 80%;
-    height: fit-content;
+    width: 400px;
+    height: 700px;
     background-color: #ededed;
     box-shadow: 3px 3px 10px #637899;
     text-align: center;
     box-sizing: border-box;
     padding: 25px;
-    padding-top: 100px;
+    z-index: 8;
 }
 
 .InfoCard img {
+    display: none;
     width: 80%;
     max-height: 400px;
     margin: 0 25px;
@@ -23,85 +62,16 @@
     box-shadow: 5px 5px 15px #637899;
 }
 
-.InfoData {
-    height: 80%;
-    width: 100%;
-    margin: 10px;
-}
-
-.Genres {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-}
-
-.Genres ul {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    align-items: center;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.Genres li {
-    border: 1px solid #999;
-    border-radius: 5px;
-    padding: 5px;
-    background-color: #ebeced;
-    box-shadow: 2px 2px 5px #637899;
-    margin-left: 25px;
-}
-
-.InfoBox {
-    display: block;
-    box-sizing: border-box;
-    font-size: .8rem;
-    padding: 10px;
-    margin: 25px auto;
-    border: 1px solid #999;
-    background-color: #ebeced;
-    border-radius: 2px;
-    max-width: 250px;
-    box-shadow: 2px 2px 5px #637899;
-}
-
-.InfoBox p {
-    margin: 0;
-}
-
 @media(min-width: 500px) {
-    .InfoCard {
-        padding-bottom: 100px;
-    }
     .InfoCard img {
         max-width: 280px;
     }
 }
 
-@media (min-width: 750px) {
-    .InfoData {
-        margin: 0 25px 0 10px;
-    }
-}
-
-
 @media(min-width: 768px) {
     .InfoCard {
         flex-wrap: nowrap;
-        width: 100%;
-    }
-}
-
-@media(min-width: 768px) {
-    .InfoCard {
         width: 80%;
         padding-right: 0;
-    }
-    
-    .InfoBox {
-        margin: 25px;
-        margin-left: 0;
     }
 }
