--- a/src/components/UI/Backdrop/Backdrop.module.css
+++ b/src/components/UI/Backdrop/Backdrop.module.css
@@ -1,8 +1,8 @@
 .Backdrop {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: rgba(54, 54, 54, .6);
     z-index: 150;
