--- a/src/components/infoCard/infoCard/InfoControls/InfoControls.module.css
+++ b/src/components/infoCard/infoCard/InfoControls/InfoControls.module.css
@@ -1,28 +1,59 @@
 .InfoControls {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
     width: 100%;
+    height: 100%;
 }
 
-.UpdatedButton {
-    margin-right: 0;
-    border-radius: 0;
+.LoginCatch h2,
+.InfoControls h2 {
+    color: #4632c2;
+    text-align: center;
+    margin: 0;
+}
+
+.LoginCatch hr,
+.InfoControls hr {
     width: 100%;
-    padding: 10px;
+    height: 2px;
+    border-top: 2px solid #4632c2;
+}
+
+.LoginCatch li {
     text-align: center;
 }
 
-@media (min-width: 750px) {
-    .InfoControls {
-        flex-direction: column;
-        justify-content: center;
-        width: 40px;
-        height: 100%;
-    }
+.LoginCatch a {
+    color: #c97793;
+}
 
-    .UpdatedButton {
-        height: 100%;
-        padding-right: 25px;
+.UserControlsContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 10px 0 0 0;
+    width: 100%;
+}
+
+.UserMediaControls {
+    margin-left: auto;
+}
+
+.UserMediaControls button {
+    height: 35px;
+    padding: 5px;
+    border: none;
+    fill: #c97793;
+    transition: fill .2s ease-in-out;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.UserMediaControls button:hover {
+    fill: #c7416f;
+}
+
+@media(min-width: 546px) {
+    .UserControlsContainer {
+        flex-direction: row;
     }
 }
