--- a/src/components/Explore/GenrePage/GenrePage.module.css
+++ b/src/components/Explore/GenrePage/GenrePage.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 60vw;
-    margin: 0 auto;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 25px;
 }
