--- a/src/components/Header/Logo/Logo.module.css
+++ b/src/components/Header/Logo/Logo.module.css
@@ -14,7 +14,7 @@
 
 .LogoLetters {
     margin: 0;
-    font-size: 3rem;
+    font-size: 2.5rem;
     text-align: center;
     font-weight: bold;
 }
@@ -70,5 +70,11 @@
     
     .Logo img {
         min-height: 100%;
+    }
+}
+
+@media (min-width: 1000px) {
+    .LogoLetters {
+        font-size: 3rem !important;
     }
 }
