--- a/src/containers/Info/Info.module.css
+++ b/src/containers/Info/Info.module.css
@@ -1,3 +1,14 @@
+
+.Loading {
+    height: calc(100vh - 75px);
+    width: 100%;
+    background-color: #002da1;
+    background-image: linear-gradient(to right, #608aad, #0048ff);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @media(min-width: 900px) {
     .Info {
         height: calc(100vh - 100px);
