--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color: #002da1;
+  background-image: linear-gradient(to right, #608aad, #0048ff); */
   background-image: linear-gradient(to right, #e0ecff, #cacaca);
 }
 
